# lcopenapi

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lcopensdk-config.cmake  lcopensdk-config.cmake.in  lcopensdk.sln
include/: lcopensdk_global.h
include/lcopensdk_api/: ConstString.h  FreeBuffer.h  LCOpenApiClientSdk.h  LCOpenSDK_Api.h  LCOpenSDK_Define.h  OAuth2Client.h  basedef.h
include/lcopensdk_api/LCOpenApi/: AddGroup.h  AddGroupDevice.h  AddRole.h  BeAuthDeviceList.h  BindDevice.h  BindDeviceInfo.h  BreathingLightStatus.h  CheckDeviceBindOrNot.h  ChildGroupList.h  CloudRecordPlan.h  ControlDeviceWifi.h  ControlPTZ.h  CurrentDeviceWifi.h  DeleteAlarmMessage.h  DeleteCloudPlanRecords.h  DeleteCloudRecords.h  DeleteGroup.h  DeleteGroupDevice.h  DeleteRole.h  DeleteUserAuthTager.h  DeviceAlarmPlan.h  DeviceAuthInfo.h  DeviceBaseDetailList.h  DeviceBaseList.h  DeviceList.h  DeviceOnline.h  DeviceOpenDetailList.h  DeviceOpenList.h  DeviceVersionList.h  FrameReverseStatus.h  GetAlarmMessage.h  GetAuthFunctions.h  GetCloudRecords.h  GetRecordByLinkageId.h  GetStorageStrategy.h  GetStrategies.h  GroupDeviceList.h  GroupList.h  (+36 more)
include/lcopensdk_audiotalk/: LCOpenSDK_AudioTalk.h  LCOpenSDK_TalkerListener.h
include/lcopensdk_deviceinit/: LCOpenSDK_DeviceInit.h
include/lcopensdk_download/: LCOpenSDK_Download.h  LCOpenSDK_DownloadListener.h
include/lcopensdk_loginmanager/: LCOpenSDK_LoginListener.h  LCOpenSDK_LoginManager.h
include/lcopensdk_netsdk/: LCOpenSDK_NetSDKLogin.h  dhnetsdk.h
include/lcopensdk_utils/: LCOpenSdk_Utils.h
include/lcopensdk_videoplay/: LCOpenSDK_Param.h  LCOpenSDK_PlayerListener.h  LCOpenSDK_VideoPlay.h
lib/: LCOpenApiClientmd.lib  LCOpenSDKmd.lib  libcurlmd.lib  ssleay32md.lib
